--- a/KSpring02_BuyerThymeleaf-v3/src/main/resources/application.properties
+++ b/KSpring02_BuyerThymeleaf-v3/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# classpath : spring src/main ??? ?? ??? ???? ?? ???
+# classpath: spring src/main ??? ?? ??? ??? ? ?? ???
 spring.mvc.static-path-pattern=/static/**
 spring.web.resources.static-locations=classpath:static/
 spring.web.resources.add-mappings=true
@@ -12,7 +12,20 @@ spring.datasource.password=dudzpsdb1!
 # JPA Setting
 spring.jpa.hibernate.ddl-auto=create
 
+# bulk date insert or update Batch Process Enable
+spring.jpa.hibernate.jdbc.batch-auto=100
+spring.jpa.hibernate.order-insert=true
+spring.jpa.hibernate.order-update=true
+
+
 spring.jpa.database=mysql
 spring.jpa.database-plattform=org.hibernate.dialect.MySQL8Dialect
+
+# SQL logger
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# logger Setting
+spring.out.put.ansi.enabled=ALWAYS
+logging.level.root=info
+logging.level.com.callor.spring=debug
