--- a/KSpring03-ReadBook-V3/src/main/resources/application.yml
+++ b/KSpring03-ReadBook-V3/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
     database: mysql
     show-sql: true
     hibernate:
-      ddl-auto: create
+#      ddl-auto: create
 
     # SQL Show Pretty formatter ??
     properties:
